# davai

./: .gitignore  COMPLETE_PROJECT_GENERATOR.md  QUICK_START.md  README.md
backend/: .env.example  AGENT_ARCHITECTURE.md  CLEAN_ARCHITECTURE.md  DAVAI_POC_Postman_Collection.json  README.md  app_factory.py  main.py  pyproject.toml  run_server.py  start.sh  test_uvicorn.py
backend/agents/: base_agent.py  documentation_generator_agent.py  question_generator_agent.py
backend/agents/architecture_agent/: architecture_agent.py  architecture_agent_prompt.md
backend/agents/claude_guide_agent/: claude_guide_agent.py  claude_guide_agent_prompt.md
backend/agents/context_agent/: context_agent.py  context_agent_prompt.md
backend/agents/project_rules_agent/: project_rules_agent.py  project_rules_agent_prompt.md
backend/agents/question_generator/: question_generator_agent.py  question_generator_prompt.md
backend/agents/readme_agent/: readme_agent.py  readme_agent_prompt.md
backend/agents/suggestion_agent/: suggestion_agent.py  (+1 more)
backend/config/: api_keys_config.py  llm_config.py  settings.py
backend/docs/: AGENT_ARCHITECTURE.md  AGENT_PROMPTS.md  AGENT_ROUTES_DEPENDENCIES.md  API_WORKFLOW.md  DAVAI_POC_SUMMARY.md  QUICK_START.md  README.md  WORKFLOW_DEPENDENCIES.md  postman.json
backend/models/: agent_requests.py  complete_workflow_request.py  documentation.py  project_data.py  project_idea.py  questions.py  suggestion_input.py  suggestions.py  workflow_models.py  workflow_result.py  workflow_step.py
backend/routes/: api.py  workflow_routes.py
backend/services/: llm_factory.py  workflow_orchestrator.py
backend/utils/: logger.py
(+35 files in other folders)
