[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "davai-poc"
version = "0.1.0"
description = "DAVAI - Complete Project Generator POC with AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.104.1",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.24.0",

    # AI/ML Dependencies
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-anthropic>=0.0.1",
    "langchain-core>=0.1.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",

    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",

    # Async Support
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",

    # Utilities
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "pytest-mock>=3.12.0",
]
dev = [
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
